--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -94,7 +94,7 @@ img {vertical-align: middle;}
 
 			<img class="sticky" src="mm.png" alt="Avatar" width="200" height="500">
 			<img src="banner.jpg" alt="p5r banner" width="1479" height="500">
-			<img class="sticky" src="fm.png" alt="Avatar" width="250" height="500" style = "position:fixed; left:1730px;>
+			<img class="sticky" src="fm.png" alt="Avatar" width="250" height="500" style = "position:fixed; left:1730px;">
 
 		 <center><h1>Persona 5 Royal Showtime</h1></center>
 
@@ -105,7 +105,7 @@ img {vertical-align: middle;}
 		 <center><h2>The map of game</h2></center>
 		 <center><img src="map.jpg" alt="map of game"></center>
 
-		 <center><h2>Boss Fight you will meet</h2></center>
+		 <center><h2>Boss Fight You Will Meet</h2></center>
 
 		 <center><iframe width="1000" height="600" src="https://www.youtube.com/embed/SyQH3-XMgTs?&autoplay=1&mute=1&start=180" title="YouTube video player" frameborder="0" allow="autoplay" allowfullscreen></iframe></center>
 
@@ -208,17 +208,22 @@ function showSlides() {
   setTimeout(showSlides, 4000); // Change image every 2 seconds
 }
 </script>
-		
-		<center><h2> Background Infomation About This Game </h2></center>
+		<center><table style="background-color:black; color: white" width="600">
+    <th><h2>Background Infomation About This Game</h2></th>
+    </table></center>
+		<center><object data="P5R intro.html" width="600" height="400" style="background-color: white"></object></center>
 
-		<center><object data="P5R intro.html" width="600" height="600"></object></center>
+    <center><table style="background-color:black; color: white" width="600">
+    <th><h2>Japnan news RSS</h2></th>
+    </table></center>
+    <center><iframe src="https://rss.bloople.net/?url=http%3A%2F%2Fwww.newsonjapan.com%2Frss%2Ftop.xml&showicon=true&type=html"width="600" height="400" style="border:0; background-color: white;"  allowfullscreen="" loading="lazy"></iframe></center>
 
 		<div class="w3-container">
 	    <img src="black.png" alt="logo">
 	    <a href="https://www.facebook.com/AtlusWest" target="_blank"><img src="icon/icon_facebook-0110d571a2.jpg" style = "position:absolute; top: 25%; left: 40%"></a>
 	    <a href="https://www.twitch.tv/atlus_west" target="_blank"><img src="icon/icon_twitch-fef71e783d.jpg" style = "position:absolute; top: 25%; left: 45%"></a>
 	    <a href="https://twitter.com/atlus_west" target="_blank"><img src="icon/icon_twitter-087f8a7fb2.jpg" style = "position:absolute; top: 25%; left: 50%"></a>
-	    <a href="https://www.youtube.com/channel/UC7hgDFSPvJVIUx_b8i1cILA" target="_blank"><img src="icon/icon_youtube-a74fee6ee4.jpg" style = "position:absolute; top: 25%; left: 55%">
+	    <a href="https://www.youtube.com/channel/UC7hgDFSPvJVIUx_b8i1cILA" target="_blank"><img src="icon/icon_youtube-a74fee6ee4.jpg" style = "position:absolute; top: 25%; left: 55%"></a>
 		</div>
 
 		<img src="bottom banner.jpg" alt="logo">
