--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -214,7 +214,7 @@ function showSlides() {
 		<center><object data="P5R intro.html" width="600" height="400" style="background-color: white"></object></center>
 
     <center><table style="background-color:black; color: white" width="600">
-    <th><h2>Japnan news RSS</h2></th>
+    <th><h2>Japan News RSS</h2></th>
     </table></center>
     <center><iframe src="https://rss.bloople.net/?url=http%3A%2F%2Fwww.newsonjapan.com%2Frss%2Ftop.xml&showicon=true&type=html"width="600" height="400" style="border:0; background-color: white;"  allowfullscreen="" loading="lazy"></iframe></center>
 
