--- a/tags.html
+++ b/tags.html
@@ -31,7 +31,7 @@
 		<i> - Italic text</i>
 		<em> - Emphasized text</em>
 		<mark>Marked text</mark>
-		<small></small>
+		<small>End of work</small>
 
 	<body>
 </html>
