--- a/jobApplicationForm.html
+++ b/jobApplicationForm.html
@@ -202,7 +202,7 @@
 		</div>
 	</fieldset>
 
-	<input class="btn btn-primary btn-lg" type="submit" value="Submit form" onclick="alert('The form submit successfully!')">
+	<input class="button button" type="submit" value="Submit form" onclick="alert('The form submit successfully!')">
 
 </form>
 </body>
